--- a/.gitconfig
+++ b/.gitconfig
@@ -19,7 +19,7 @@
 [push]
   default = simple
 [core]
-  editor = nvim
+  editor = vim
 [pager]
   diff = diff-so-fancy | less --tabs=4 -RFX
   show = diff-so-fancy | less --tabs=4 -RFX
